# qrcode-app

./: README.md  app.py  pyproject.toml
