[project]
name = "qrcode-app"
version = "0.1.0"
description = "Streamlit app to create and decode QR codes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "av>=16.1.0",
    "opencv-python-headless>=4.13.0.92",
    "pillow>=12.2.0",
    "qrcode[pil]>=8.2",
    "streamlit>=1.57.0",
    "streamlit-webrtc>=0.71.0",
]
